--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 name: xarray-tutorial
 channels:
   - conda-forge
+  - default
 dependencies:
   - python=3.6
   - numpy
@@ -12,7 +13,7 @@ dependencies:
   - datashader
   - dask
   - distributed
+  - dask_kubernetes
   - netcdf4
   - zarr
-  - pip:
-    - nbserverproxy
+  - nbserverproxy
