--- a/worker-template.yaml
+++ b/worker-template.yaml
@@ -11,19 +11,12 @@ spec:
       - 6GB
       - --death-timeout
       - '60'
-    image: pangeo/worker:2018-05-17
+    image: {JUPYTER_IMAGE_SPEC}
     name: dask-worker
-    securityContext:
-      capabilities:
-        add: [SYS_ADMIN]
-      privileged: true
-    env:
-      - name: GCSFUSE_BUCKET
-        value: pangeo-data
     resources:
       limits:
         cpu: "1.75"
-        memory: 6G
+        memory: 2G
       requests:
         cpu: "1.75"
-        memory: 6G
+        memory: 2G
