--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,6 +1,7 @@
-name: xarray-tutorial
+name: pangeo
 channels:
   - conda-forge
+  - intake
   - default
 dependencies:
   - python=3.6
@@ -8,15 +9,30 @@ dependencies:
   - scipy
   - pandas
   - xarray
+  - matplotlib
+  - dask
+  - distributed
+  - gcsfs
+  - intake
+  - intake-xarray
+  - scikit-image
+  - scikit-learn
+  - dask-ml
+  - bokeh
   - holoviews
   - geoviews
   - datashader
-  - dask
-  - distributed
   - netcdf4
   - zarr
+  - numcodecs
+  - python-blosc
+  - lz4
   - nbserverproxy
   - jupyter
   - ipywidgets
+  - graphviz
   - pip:
+    - intake
+    - intake-xarray
+    - kubernetes
     - git+https://github.com/dask/dask-kubernetes.git
